# ADTC_Arquitetura-Discursiva-Triadica-Computacional

./: README.md  README_V8.md
ADTC_Arquitetura-Discursiva-Triadica-Computacional/: COMO_INTEGRAR_V8.md  MANIFESTO_V8.md  VALIDACAO_TECNICA_V8.md
ADTC_Arquitetura-Discursiva-Triadica-Computacional/adtc/: CITATION_V8.cff  MIGRACAO_NOTEBOOK_V8.md  app_v8.py  pyproject.toml  requirements-v8.txt  requirements-xai.txt
ADTC_Arquitetura-Discursiva-Triadica-Computacional/adtc/adtc/v8/: avaliacao.py  bertimbau.py  config.py  pipeline.py  planilha.py  rag.py  taxonomia.py
ADTC_Arquitetura-Discursiva-Triadica-Computacional/adtc/data/v8/: README.md
ADTC_Arquitetura-Discursiva-Triadica-Computacional/adtc/data/v8/base_rag/: README.md  base_news_rag_curada_v2_com_proveniencia.csv
ADTC_Arquitetura-Discursiva-Triadica-Computacional/adtc/data/v8/idpt/: README.md
ADTC_Arquitetura-Discursiva-Triadica-Computacional/adtc/data/v8/taxonomia/: README.md  quadro_taxonomia_ironia_pb_integrado.csv
ADTC_Arquitetura-Discursiva-Triadica-Computacional/adtc/notebooks/v8/: pipeline_v8_modular.ipynb
ADTC_Arquitetura-Discursiva-Triadica-Computacional/adtc/notebooks/v8/legado/: parte4_pipeline_v8_rag_integrado_adtc_xai_final_corrigido.ipynb
ADTC_Arquitetura-Discursiva-Triadica-Computacional/adtc/scripts/: gerar_planilha_final.py  integrar_avaliacao_manual.py  rodar_experimento_v8.py
ADTC_Arquitetura-Discursiva-Triadica-Computacional/adtc/tests/v8/: test_integridade.py  test_metricas_rag.py  test_smoke_v8.py
adtc/: CITATION.cff  LICENSE  PUBLICACAO.md  __init__.py  app.py  arquivos.py  (+5 more)
(+16 files in other folders)
