[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adtc-v8"
version = "0.8.0"
description = "Pipeline V8 da Arquitetura Discursiva Triádica Computacional para auditoria de ironia em notícias"
requires-python = ">=3.10"
authors = [{name = "Mayara Sousa Miguel"}]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "openpyxl>=3.1",
  "tabulate>=0.9"
]

[project.optional-dependencies]
neural = ["sentence-transformers>=3.0", "transformers>=4.44", "torch>=2.1", "accelerate>=0.30"]
xai = ["lime>=0.2.0.1", "captum>=0.7", "shap>=0.46"]
demo = ["gradio>=4.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["adtc*"]

[tool.pytest.ini_options]
testpaths = ["tests/v8"]
